<resources>
    <string name="app_name">핀메뉴 관리</string>
    <string name="kakao_appKey">ed079e485180274fc2b0ae6a18748457</string>
    <string name="kakao_apiKey">015591dc3e42af388c31ed63f3597fd3</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="signup">회원가입</string>
    <string name="drop">탈퇴</string>
    <string name="won">원</string>
    <string name="gea">개</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="total">총</string>
    <string name="delete_order">주문삭제</string>
    <string name="total_gea">총 %d개</string>
    <string name="set_tableno">테이블 이동</string>
    <string name="sel_tableno">테이블번호 선택</string>
    <string name="tableno">테이블 번호</string>
    <string name="tablepass">테이블 비밀번호</string>
    <string name="essential">필수</string>
    <string name="choice">선택</string>
    <string name="empty">없음</string>
    <string name="order">주문</string>
    <string name="call">호출</string>
    <string name="pos">포스</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="delete">삭제</string>
    <string name="update">수정</string>
    <string name="sequence">순서</string>
    <string name="setting">설정</string>
    <string name="restore">복원</string>
    <string name="dot">・</string>
    <string name="btn_login">로&#160;그&#160;인</string>
    <string name="btn_confirm">확&#160;&#160;인</string>
    <string name="btn_cancel">취&#160;&#160;소</string>
    <string name="btn_save">저&#160;&#160;장</string>
    <string name="btn_save2">저&#160;장</string>
    <string name="btn_delete">삭&#160;&#160;제</string>
    <string name="btn_delete2">삭&#160;제</string>
    <string name="btn_update">수&#160;&#160;정</string>
    <string name="btn_update2">수&#160;정</string>
    <string name="btn_sequence">순&#160;&#160;서</string>
    <string name="btn_sequence2">순&#160;서</string>
    <string name="btn_call">호&#160;&#160;출</string>
    <string name="btn_call2">호&#160;출</string>
    <string name="btn_complete">완&#160;&#160;료</string>
    <string name="btn_payment">결&#160;&#160;제</string>
    <string name="btn_payment2">결&#160;제</string>
    <string name="btn_choice">선&#160;&#160;택</string>
    <string name="btn_link">연&#160;&#160;동</string>
    <string name="btn_clear">초&#160;기&#160;화</string>
    <string name="btn_add">추&#160;&#160;가</string>
    <string name="btn_close">닫&#160;&#160;기</string>
    <string name="btn_not_today">오늘 그만 보기</string>
    <string name="udt_info">정보변경</string>
    <string name="back">돌아가기</string>
    <string name="date">날짜</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="tilde">~</string>
    <string name="colon">:</string>
    <string name="right_angle">\></string>
    <string name="zero">0</string>
    <string name="zero2">00</string>
    <string name="min">분</string>
    <string name="zeroClock"><font color="#B4B4B4">00</font>:<font color="#B4B4B4">00</font></string>
    <string name="monday">월요일</string>
    <string name="tuesday">화요일</string>
    <string name="wednesday">수요일</string>
    <string name="thursday">목요일</string>
    <string name="friday">금요일</string>
    <string name="saturday">토요일</string>
    <string name="sunday">일요일</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="sun">일</string>
    <string name="password_hint">8자리 이상 입력해 주세요.</string>
    <string name="check_id">중복체크</string>
    <string name="unable">사용불가</string>
    <string name="able">사용가능</string>
    <string name="link">연동</string>
    <string name="link_before">연동전</string>
    <string name="link_after">연동됨</string>
    <string name="link_fail">연동불가</string>
    <string name="arpayo_id">알파요 아이디(이메일)</string>
    <string name="arpayo_id_hint">알파요 ID(이메일) 입력해 주세요.</string>
    <string name="signup_info1">아이디(이메일)는\n비밀번호 찾기를 할 때 필요한 정보입니다.\n사용 가능한 이메일로 가입해 주세요.</string>
    <string name="signup_info2">알파요 앱 아이디를 연동해주시면\n자동시급계산 앱 알파요를 사용 중인 사장님들에게\n추가 보상을 드립니다.</string>
    <string name="term1">이용약관 동의(필수)</string>
    <string name="term2">개인정보 취급방침 동의(필수)</string>
    <string name="term3">마케팅 활용 동의(선택)</string>
    <string name="login_info">회원가입은 홈페이지\n또는 태블릿용 앱에서 가능합니다.</string>
    <string name="find_pwd">비밀번호 찾기</string>
    <string name="email">아이디(이메일)</string>
    <string name="email_hint">이메일을 입력해 주세요</string>
    <string name="find_pwd_info1">회원 아이디(이메일)를 입력해 주세요.\n작성하신 아이디로 새로운 비밀번호가 전송됩니다.</string>
    <string name="find_pwd_info2">가입되지 않은 아이디는 이메일이 발송되지 않습니다.</string>
    <string name="send_pwd">새로운 비밀번호 전송</string>
    <string name="use">사용중</string>
    <string name="not_use">미사용</string>
    <string name="store_addition">부가서비스&#160;:&#160;</string>
    <string name="arpayo_conn">알파요연동</string>
    <string name="arpayo_dis_conn">알파요미연동</string>
    <string name="main">메인</string>
    <string name="store_udt">정보수정</string>
    <string name="store_pay_info">결제정보</string>
    <string name="store_pay_date">다음결제일</string>
    <string name="store_list_info">운영중인 매장을 등록하여 이용하실 수 있습니다.\n복수의 매장을 운영중이시면 다수의 매장을 등록하실 수 있습니다.</string>
    <string name="store_name">매장명</string>
    <string name="store_name_hint">매장명을 입력해주세요.</string>
    <string name="store_addr">매장주소</string>
    <string name="store_addr_hint">지도검색 버튼을 눌러서 입력</string>
    <string name="store_map">지도검색</string>
    <string name="map_hint">주소를 입력하세요.</string>
    <string name="store_addr_info1">매장 주소는 매우 중요한 정보입니다.\n매장 주소를 토대로 주변 고객분들께 재방문, 신규방문\n이벤트가 진행됩니다.\n매장 주소는 지도에서 정확하게 선택해 주세요.</string>
    <string name="store_addr_info2">핀메뉴 관리자 앱을 사용하시기 위해서는 1개의\n매장을 필수로 등록 하셔야 이용이 가능합니다.</string>
    <string name="store_addr_info3">매장정보 수정, 메뉴등록은 태블릿PC 또는\n홈페이지에서 가능합니다</string>
    <string name="store_reg">매장등록</string>
    <string name="store_detail">세부정보</string>
    <string name="store_tel">매장 전화번호</string>
    <string name="store_sns">SNS 계정 정보</string>
    <string name="store_pd">배달/주차 정보</string>
    <string name="store_tel_hint">예) 1688-2315</string>
    <string name="store_insta">인스타그램 계정</string>
    <string name="at"><![CDATA[@]]></string>
    <string name="store_insta_hint">계정을 입력해주세요</string>
    <string name="store_delivery">배달 가능 여부</string>
    <string name="store_delivery_y">배달 가능</string>
    <string name="store_delivery_n">배달 없음</string>
    <string name="store_parking">주차 가능 여부</string>
    <string name="store_parking_y">주차 가능</string>
    <string name="store_parking_n">주차장 없음</string>
    <string name="store_parking_addr">주차장 주소</string>
    <string name="store_open_hours">영업시간</string>
    <string name="store_day_of_week">요일별</string>
    <string name="store_break">브레이크타임</string>
    <string name="store_holiday">휴일</string>
    <string name="store_same_hour">매일 동일한 영업시간</string>
    <string name="store_diff_hour">매일 다른 영업시간</string>
    <string name="store_same_break">매일 동일한 브레이크 타임</string>
    <string name="store_diff_break">매일 다른 브레이크 타임</string>
    <string name="store_same_holiday">매주 동일한 휴일</string>
    <string name="store_special_holiday">특별 휴일 입력</string>
    <string name="everyday">매일</string>
    <string name="everymonth">매월</string>
    <string name="store_time_info">새벽 6시 마감은 30:00으로 설정</string>
    <string name="store_time_set">영업시간 설정</string>
    <string name="store_break_set">브레이크타임 설정</string>
    <string name="store_holiday_set">휴일 설정</string>
    <string name="store_holiday_name">휴일 명칭</string>
    <string name="store_holiday_name_hint">명칭을 입력해주세요.</string>
    <string name="store_holiday_set_info">‘월’을 입력하지 않으면 ‘매월’로 표시합니다.</string>
    <string name="order_mgmt">주문정보</string>
    <string name="call_mgmt">직원 호출</string>
    <string name="menu_mgmt">메뉴판 설정</string>
    <string name="event_mgmt">이벤트 관리</string>
    <string name="find_menu">메뉴판 찾기</string>
    <string name="order_info_sub">주문 내역 확인</string>
    <string name="call_mgmt_sub">호출 내역 확인</string>
    <string name="menu_mgmt_sub">메뉴 정보 입력</string>
    <string name="menu_mgmt_sub2">메뉴판 색상 설정</string>
    <string name="category_name">카테고리 명칭</string>
    <string name="category_exp">카테고리 설명</string>
    <string name="category_exp_hint">설명 혹은 영문을 입력해 주세요.</string>
    <string name="category_dialog_info2"><b>카테고리 [숨김] 필요한 경우</b>에는\n우측 상단에 있는 [숨기기] 옆 Off 버튼을 On으로 변경\n후 저장을 눌러주십시오.\n삭제는 카테고리에 입력된 모든 메뉴 정보가 삭제되지만,\n[숨기기]는 고객에게 보여지지 않도록 설정됩니다.</string>
    <string name="category_hide">숨기기</string>
    <string name="payment_title_pg_info">PG 카드 심사 정보</string>
    <string name="payment_set_pg_info">사업자등록증에 등록된 내용을 작성해 주세요.\n해당 내용은 PG 결제를 위한 카드사 심사에 사용되며\n고객 주문 페이지 하단에 노출됩니다.</string>
    <string name="payment_set_pg_store_name">상호</string>
    <string name="payment_set_pg_store_name_hint">사업자등록증의 상호를 작성해 주세요.</string>
    <string name="payment_set_pg_store_addr">사업장주소</string>
    <string name="payment_set_pg_store_addr_hint">사업자등록증의 주소를 작성해 주세요.</string>
    <string name="payment_set_pg_store_tel">연락처 (‘-’포함해서 작성)</string>
    <string name="payment_set_pg_store_tel_hint">매장 전화번호를 작성해 주세요.</string>
    <string name="payment_set_pg_reg_number">사업자번호</string>
    <string name="payment_set_pg_reg_number_hint">사업자등록번호를 작성해 주세요.</string>
    <string name="payment_set_pg_owner_name">대표자명</string>
    <string name="payment_set_pg_owner_name_hint">사업자등록증의 대표자명을 작성해 주세요.</string>
    <string name="android_smartphone">안드로이드 스마트폰</string>
    <string name="printer_nick">별명</string>
    <string name="printer_nick_title">별명 입력</string>
    <string name="printer_nick_hint">예) 주방</string>
    <string name="printer_device">선택된 기기</string>
    <string name="printer_nick_info">별명은 반드시 구별 할 수 있는 명칭을\n사용해 주세요.</string>
    <string name="qr_post_pay_one">QR코드 후불결제 적용</string>
    <string name="qr_setting_info1">QR오더는 결제가 완료된 후 주문내역이 전송됩니다.\n(단, 후불결제 기능을 설정했을 경우 제외)</string>
    <string name="qr_setting_info2">이 페이지에서 QR코드를 생성한 후 테이블번호 저장과 변경이 가능하며 QR코드 삭제가 가능합니다.</string>
    <string name="qr_detail_info1">생성된 QR코드는 변경할 수 없고, 삭제만 가능합니다.</string>
    <string name="qr_detail_info2">삭제된 QR코드는 다시 사용할 수 없습니다.</string>
    <string name="qr_detail_info3">입력된 테이블번호는 이 페이지에서 수정 가능합니다.</string>
    <string name="qr_detail_info4">테이블번호가 중복되지 않도록 관리해주세요.</string>
    <string name="qr_detail_info5">테이블번호를 영문과 숫자로 작성할 경우 QR코드 저장시 파일명으로 적용됩니다.\n단, 한글은 저장 파일명에 적용되지 않습니다.</string>
    <string name="qr_reserv_info1">예약 QR 선불결제만 가능</string>
    <string name="qr_reserv_info3">PG 가입 완료 후 예약 기능이 활성화 됩니다.</string>
    <string name="qr_reserv_info4">예약 QR코드는 테이블 수에 포함되지 않습니다.</string>
    <string name="qr_reserv_info5">예약 테이블명은 변경이 불가능합니다.</string>
    <string name="qr_reserv_info6">QR코드를 이미지로 저장 후 사용 가능합니다.</string>
    <string name="qr_reserv_info7">예약 URL을 복사하여 외부로 전달하여 사용할 수 있습니다.</string>
    <string name="qr_reserv_info8">예약 QR코드로 주문된 내역은 주문내역에 다른 색으로 표시됩니다.</string>
    <string name="qr_reserv_info9">예약 시 다음 정보를 받을 수 있습니다.\n전화번호, 예약자명, 예약일, 예약시간, 요청사항</string>
    <string name="qr_join_way">가맹점 가입방법</string>
    <string name="qr_guide_title">QR코드 카드결제를 이용하기 위한 절차</string>
    <string name="qr_guide_fir">1. 나이스페이먼츠 가맹점 계약 신청 및 우편 발송</string>
    <string name="qr_guide_fir_1">・자세한 사항은 핀메뉴 웹사이트에 있습니다.\n&#160;&#160;&#160;&#160;<font color="#006CFF">(경로 : www.pinmenu.biz > 로그인 >\n&#160;&#160;&#160;&#160;상단 햄버거 버튼 > PG 신청/관리)</font></string>
    <string name="qr_guide_fir_2">・나이스페이먼츠와 가맹점 계약을 통해 핀메뉴\n&#160;&#160;&#160;&#160;결제 수수료가 정해집니다.\n&#160;&#160;&#160;&#160;(핀메뉴는 나이스페이먼츠의 정책에 따릅니다.)</string>
    <string name="qr_guide_sec">2. PG 카드 심사 정보 작성</string>
    <string name="qr_guide_sec_1">・사업자정보, 상호, 대표자명, 연락처, 사업장주소를\n&#160;&#160;&#160;&#160;사업자등록증에 기재된 내용대로 누락없이 작성</string>
    <string name="title_cate_add">카테고리입력</string>
    <string name="msg_no_name">명칭을 입력해주세요.</string>
</resources>