<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/title"
        android:id="@+id/title"
        android:text="@string/payment_title_pg_info"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_back_white" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            style="@style/text15"
            android:layout_marginTop="25dp"
            android:text="@string/payment_set_pg_info"/>

        <TextView
            style="@style/text15d"
            android:text="@string/payment_set_pg_reg_number"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/etRegNum"
            style="@style/edittext"
            android:inputType="number"
            android:hint="@string/payment_set_pg_reg_number_hint"
            android:layout_marginTop="10dp"/>

        <TextView
            style="@style/text15d"
            android:text="@string/payment_set_pg_store_name"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/etStoreName"
            style="@style/edittext"
            android:hint="@string/payment_set_pg_store_name_hint"
            android:layout_marginTop="10dp"/>

        <TextView
            style="@style/text15d"
            android:text="@string/payment_set_pg_owner_name"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/etOwnerName"
            style="@style/edittext"
            android:inputType="text"
            android:hint="@string/payment_set_pg_owner_name_hint"
            android:layout_marginTop="10dp"/>

        <TextView
            style="@style/text15d"
            android:text="@string/payment_set_pg_store_tel"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/etStoreTel"
            style="@style/edittext"
            android:inputType="phone"
            android:hint="@string/payment_set_pg_store_tel_hint"
            android:layout_marginTop="10dp"/>

        <TextView
            style="@style/text15d"
            android:text="@string/payment_set_pg_store_addr"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/etStoreAddr"
            style="@style/edittext"
            android:inputType="text"
            android:hint="@string/payment_set_pg_store_addr_hint"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <TextView
        style="@style/btn"
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>