<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/f9"
    tools:context="com.wooriyo.us.pinmenumobileer.payment.NicepayJoinWayActivity">

    <TextView
        style="@style/title"
        android:id="@+id/title"
        android:text="@string/qr_join_way"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_back_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TextView
            style="@style/text17b"
            android:text="@string/qr_guide_title"/>

        <TextView
            style="@style/text17"
            android:layout_marginTop="20dp"
            android:text="@string/qr_guide_fir"/>

        <TextView
            style="@style/subtext"
            android:layout_marginTop="10dp"
            android:layout_marginStart="14dp"
            android:text="@string/qr_guide_fir_1"/>

        <TextView
            style="@style/subtext"
            android:layout_marginTop="10dp"
            android:layout_marginStart="14dp"
            android:text="@string/qr_guide_fir_2"/>

        <TextView
            style="@style/text17"
            android:layout_marginTop="20dp"
            android:text="@string/qr_guide_sec"/>

        <TextView
            style="@style/subtext"
            android:layout_marginTop="10dp"
            android:layout_marginStart="14dp"
            android:text="@string/qr_guide_sec_1"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>