<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wooriyo.us.pinmenumobileer.menu.AddCategoryActivity">
    <TextView
        style="@style/title"
        android:id="@+id/title"
        android:text="@string/title_cate_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:layout_constraintBottom_toBottomOf="@+id/title">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_back_white"/>
    </LinearLayout>

    <TextView
        style="@style/text15d"
        android:layout_marginEnd="10dp"
        android:text="@string/category_hide"
        app:layout_constraintEnd_toStartOf="@+id/hide"
        app:layout_constraintTop_toTopOf="@+id/hide"
        app:layout_constraintBottom_toBottomOf="@+id/hide"/>
    <CheckBox
        style="@style/toggle"
        android:id="@+id/hide"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        style="@style/text15d"
        android:id="@+id/tv1"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/category_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hide" />
    <EditText
        style="@style/edittext"
        android:id="@+id/etName"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/msg_no_name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        app:layout_constraintStart_toStartOf="@id/tv1"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        style="@style/text15d"
        android:id="@id/tv2"
        android:layout_marginTop="20dp"
        android:text="@string/category_exp"
        app:layout_constraintStart_toStartOf="@+id/tv1"
        app:layout_constraintTop_toBottomOf="@+id/etName"/>
    <EditText
        style="@style/edittext"
        android:id="@+id/etSub"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/category_exp_hint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2"/>
    <TextView
        style="@style/subtext"
        android:layout_marginTop="30dp"
        android:lineSpacingExtra="5dp"
        android:text="@string/category_dialog_info2"
        app:layout_constraintTop_toBottomOf="@+id/etSub"
        app:layout_constraintStart_toStartOf="@id/etSub" />

    <TextView
        style="@style/btn_cancel"
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_marginStart="20dp"
        android:text="@string/delete"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save"/>
    <TextView
        style="@style/btn"
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/save"
        android:visibility="visible"
        app:layout_goneMarginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>





</androidx.constraintlayout.widget.ConstraintLayout>