<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingHorizontal="20dp">

<TextView
    style="@style/text17d"
    android:text="@string/qr_post_pay_one"
    app:layout_constraintTop_toTopOf="@+id/postPay"
    app:layout_constraintBottom_toBottomOf="@+id/postPay"
    app:layout_constraintStart_toStartOf="parent"/>

<CheckBox
    android:id="@+id/postPay"
    style="@style/toggle"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="10dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

<TextView
    style="@style/subtext"
    android:id="@+id/dot1"
    android:text="@string/dot"
    android:layout_marginTop="20dp"
    app:layout_constraintTop_toBottomOf="@+id/postPay"
    app:layout_constraintStart_toStartOf="parent"/>

<TextView
    style="@style/subtext"
    android:id="@+id/dot2"
    android:text="@string/dot"
    android:layout_marginTop="10dp"
    app:layout_constraintStart_toStartOf="@+id/dot1"
    app:layout_constraintTop_toBottomOf="@+id/info1"/>

<TextView
    style="@style/subtext"
    android:id="@+id/dot3"
    android:text="@string/dot"
    android:layout_marginTop="10dp"
    app:layout_constraintStart_toStartOf="@+id/dot2"
    app:layout_constraintTop_toBottomOf="@+id/info2"/>

<TextView
    style="@style/subtext"
    android:id="@+id/dot4"
    android:text="@string/dot"
    android:layout_marginTop="10dp"
    app:layout_constraintStart_toStartOf="@+id/dot3"
    app:layout_constraintTop_toBottomOf="@+id/info3"/>

<TextView
    style="@style/subtext"
    android:id="@+id/dot5"
    android:text="@string/dot"
    android:layout_marginTop="10dp"
    app:layout_constraintStart_toStartOf="@+id/dot4"
    app:layout_constraintTop_toBottomOf="@+id/info4"/>

<TextView
    style="@style/subtext"
    android:id="@+id/info1"
    android:text="@string/qr_detail_info1"
    app:layout_constraintStart_toEndOf="@+id/dot1"
    app:layout_constraintTop_toTopOf="@+id/dot1"/>

<TextView
    style="@style/subtext"
    android:id="@+id/info2"
    android:text="@string/qr_detail_info2"
    app:layout_constraintStart_toEndOf="@+id/dot2"
    app:layout_constraintTop_toTopOf="@+id/dot2"/>

<TextView
    style="@style/subtext"
    android:id="@+id/info3"
    android:layout_width="0dp"
    android:text="@string/qr_detail_info3"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/dot3"
    app:layout_constraintTop_toTopOf="@+id/dot3"/>

<TextView
    style="@style/subtext"
    android:id="@+id/info4"
    android:text="@string/qr_detail_info4"
    app:layout_constraintStart_toEndOf="@+id/dot4"
    app:layout_constraintTop_toTopOf="@+id/dot4"/>

<TextView
    style="@style/subtext"
    android:id="@+id/info5"
    android:text="@string/qr_detail_info5"
    android:layout_width="0dp"
    android:layout_marginBottom="20dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toEndOf="@+id/dot5"
    app:layout_constraintTop_toTopOf="@+id/dot5"/>
</androidx.constraintlayout.widget.ConstraintLayout>