<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_r6w">

        <TextView
            style="@style/text17"
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/qr_setting_info1"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            style="@style/text17"
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/qr_setting_info2"
            app:layout_constraintTop_toBottomOf="@+id/tv1"/>

        <TextView
            android:id="@+id/confirm"
            style="@style/btn_dialog"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:text="@string/btn_confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>